# api/handler/handler.go
@@ -4,6 +4,7 @@ import (
 	"api-gateway/genproto/health"
 	"api-gateway/genproto/user"
 	"log/slog"
+	"github.com/casbin/casbin/v2"
 )
 
 type Handler struct {
@@ -13,9 +14,11 @@ type Handler struct {
 	Mecdical health.MedicalRecordClient
 	Wearable health.WearableClient
 	Logger *slog.Logger
+	Enforcer *casbin.Enforcer
+	Notification     user.NotificationsClient
 }
 
-func NewHandler(user user.UsersClient, healthClient health.HealthCheckClient, lifeStyleClient health.LifeStyleClient, medicalRecordClient health.MedicalRecordClient, wearableClient health.WearableClient, logger *slog.Logger) *Handler {
+func NewHandler(user user.UsersClient, healthClient health.HealthCheckClient, lifeStyleClient health.LifeStyleClient, medicalRecordClient health.MedicalRecordClient, wearableClient health.WearableClient, logger *slog.Logger, Enforcer *casbin.Enforcer, Notification user.NotificationsClient) *Handler {
 	return &Handler{
         User:         user,
         Health:  healthClient,
@@ -23,5 +26,7 @@ func NewHandler(user user.UsersClient, healthClient health.HealthCheckClient, li
         Mecdical: medicalRecordClient,
         Wearable: wearableClient,
         Logger:        logger,
+		Enforcer: Enforcer,
+		Notification: Notification,
     }
 }
